🚧 WIP: try to fix ellipsis touch on mobile

--- a/apps/business/src/index.css
+++ b/apps/business/src/index.css
@@ -13,7 +13,6 @@ body {
 }
 
 html,
-body,
-div#root {
+body {
   height: 100%;
 }
